Mise en forme du template de base

--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{pupilName}} {% endblock %}
+{% block title %} Bienvenue, {{ userName }} {% endblock %}
 
 {% block body %}
-
-{{pupilName}} <br/>
 
 {% endblock %}
