--- a/templates/altic/teacherPupilDataTable.html.twig
+++ b/templates/altic/teacherPupilDataTable.html.twig
@@ -1,10 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{teacherName}} {% endblock %}
+{% block title %} Bienvenue, {{userName}} {% endblock %}
 
 {% block body %}
 
-{{teacherName}} <br/>
 Données de l'élève {{pupilName}} sur la table de {{tableNumber}}
 
 {% endblock %}
