--- a/templates/altic/teacherWelcome.html.twig
+++ b/templates/altic/teacherWelcome.html.twig
@@ -1,9 +1,7 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{teacherName}} {% endblock %}
+{% block title %} Bienvenue, {{userName}} {% endblock %}
 
 {% block body %}
-
-{{teacherName}}
 
 {% endblock %}
