--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -1,10 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{pupilName}} {% endblock %}
+{% block title %} Bienvenue, {{ userName }} {% endblock %}
 
 {% block body %}
 
-{{pupilName}} <br/>
 Table de {{tableNumber}}
 
 {% endblock %}
