--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,10 +3,46 @@
     <head>
         <meta charset="UTF-8">
         <title>{% block title %}Welcome!{% endblock %}</title>
-        {% block stylesheets %}{% endblock %}
+        {% block stylesheets %}
+        <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css') }}">
+        {% endblock %}
     </head>
+    <header>
+    	{% block header %}
+
+    		<div class="container">
+
+    			
+    			<div class="row align-items-center">
+
+    				<div class="col-sm-2"><h1 class="display-1">Altic</h1></div>
+
+    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+
+    				<div class="col-sm-1"> <img src="https://i.pinimg.com/originals/d4/e2/2d/d4e22dd0c172a148b1c318276a6a9dfa.jpg" class="img-thumbnail"></div>
+
+    				<div class="col-sm-2">
+    					<p>{{userName}}</p>
+    					<a href="#">Déconnexion</a>
+    					<a href="#"><img style="height: 30px; width: 30px;" src="http://www.clipartbest.com/cliparts/Kij/oA5/KijoA5a5T.png"></a>
+    				</div>
+    				
+    			</div>
+
+    		
+    		</div>
+
+    	{% endblock %}
+    </header>
     <body>
         {% block body %}{% endblock %}
-        {% block javascripts %}{% endblock %}
+        {% block javascripts %}
+
+        <script type="text/javascript" src="{{ asset('js/jquery-3.3.1.slim.min.js') }}"></script> 
+        <script type="text/javascript" src="{{ asset('js/popper.min.js') }}"></script>
+        <script type="text/javascript" src="{{ asset('js/bootstrap.min.js') }}"></script>
+
+
+        {% endblock %}
     </body>
 </html>
