Début de mise en forme des pages pupilWelcome et pupilTable

--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -4,4 +4,26 @@
 
 {% block body %}
 
+<div class="container">
+	
+
+	<div class="row">
+		<div class="col"><br/></div>
+	</div>
+
+	<div class="row align-items-end">
+		<div class="col"><img class="img-fluid" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"></div>
+	</div>
+
+	<div class="row align-items-end">
+		
+		<div class="col-sm-4"><p class="h5">Trophées</p></div>
+		<div class="col-sm-4"><p class="h5">Stastistiques</p></div>
+		<div class="col-sm-4"><p class="h5">Mes enseignants</p></div>
+
+	</div>
+
+
+</div>
+
 {% endblock %}
