--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
     <header>
     	{% block header %}
 
+    	<div style="box-shadow: 5px 10px 18px #888888;">
+
     		<div class="container">
 
     			
@@ -31,6 +33,8 @@
 
     		
     		</div>
+
+    	</div>
 
     	{% endblock %}
     </header>
