Ajout de polices de caractères

--- a/templates/altic/index.html.twig
+++ b/templates/altic/index.html.twig
@@ -4,6 +4,6 @@
 
 {% block body %}
 
-	<h1 class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
+	<h1 style="font-family: 'roboto';" class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
 
 {% endblock %}
