--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -15,7 +15,11 @@
 		<div class="col"><img class="img-fluid" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"></div>
 	</div>
 
-	<div class="row align-items-end">
+	<div class="row">
+        <div class="col"><br/></div>
+    </div>
+
+	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-end">
 		
 		<div class="col-sm-4"><p class="h5">Trophées</p></div>
 		<div class="col-sm-4"><p class="h5">Stastistiques</p></div>
