Ajout des titres sur les pages créées précédemment

--- a/templates/altic/pwdLost.html.twig
+++ b/templates/altic/pwdLost.html.twig
@@ -3,4 +3,19 @@
 {% block title %} Récupération de mot de passe {% endblock %}
 
 {% block body %}
+
+<div class="container">
+
+
+	<div class="row">
+		<div class="col"><br/></div>
+	</div>
+
+	<div class="row">
+		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Récupération de mot de passe</p></div>
+	</div>
+
+
+</div>
+
 {% endblock %}
