--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -3,4 +3,27 @@
 {% block title %} Modification de compte {% endblock %}
 
 {% block body %}
+
+<div class="container">
+
+
+	<div class="row">
+		<div class="col"><br/></p></div>
+	</div>
+
+	<div class="row">
+		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h3">Modification de compte</p></div>
+	</div>	
+
+	<div class="row">
+		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Changer de mot de passe</p></div>
+	</div>
+
+	<div class="row">
+		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
+	</div>
+
+
+</div>
+
 {% endblock %}
