--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -7,22 +7,50 @@
 <div class="container">
 	
 
+	<!--line break-->
 	<div class="row">
 		<div class="col"><br/></div>
 	</div>
 
+	<!--map-->
 	<div class="row align-items-end">
 		<div class="col"><img class="img-fluid" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"></div>
 	</div>
 
+	<!--line break-->
 	<div class="row">
         <div class="col"><br/></div>
     </div>
 
-	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-end">
+    <!--stats-->
+	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
 		
-		<div class="col-sm-4"><p class="h5">Trophées</p></div>
+		<div class="col-sm-4">
+			<p class="h5">Trophées</p>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/1.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/2.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/3.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/4.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/5.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/6.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/7.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/8.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/9.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/10.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/11.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/12.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/13.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/14.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/15.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/16.png"><br/><br/>
+			<img style="max-height: 100px; max-width: 100px;" src="images/pupil/characters/17.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/18.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/19.png"><br/><br/>
+			<img style="-webkit-filter: grayscale(100%); filter: grayscale(100%); max-height: 100px; max-width: 100px;" src="images/pupil/characters/20.png"><br/><br/>
+		</div>
+
 		<div class="col-sm-4"><p class="h5">Stastistiques</p></div>
+
 		<div class="col-sm-4"><p class="h5">Mes enseignants</p></div>
 
 	</div>
