Fixation de la bannière

--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -4,16 +4,14 @@
 
 {% block body %}
 
-<div class="container">
+{{ parent() }}
 
+<div class="container" style="font-family: 'roboto';">
 
-	<div class="row">
-		<div class="col"><br/></div>
-	</div>
 
 	<div class="row">
 		
-		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="height: 50%; width: 50%;" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"> </a></div>
+		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"> </a></div>
 
 		<div class="col-sm-4 align-self-center"><p style="text-align: center;" class="h3">Table de {{tableNumber}}</p></div>
 
