--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -4,23 +4,15 @@
 
 {% block body %}
 
+{{ parent() }}
+
 <div class="container">
 	
-
-	<!--line break-->
-	<div class="row">
-		<div class="col"><br/></div>
-	</div>
 
 	<!--map-->
 	<div class="row align-items-end">
 		<div class="col"><img class="img-fluid" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"></div>
 	</div>
-
-	<!--line break-->
-	<div class="row">
-        <div class="col"><br/></div>
-    </div>
 
     <!--stats-->
 	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
