--- a/templates/altic/index.html.twig
+++ b/templates/altic/index.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
 
-	<h1 style="font-family: 'roboto';" class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
+	{{ parent() }}
+
+	<h1 style="font-family: 'roboto'; text-aligne: justified;" class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
 
 {% endblock %}
