--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -4,12 +4,10 @@
 
 {% block body %}
 
+{{ parent() }}
+
 <div class="container">
 
-
-	<div class="row">
-		<div class="col"><br/></p></div>
-	</div>
 
 	<div class="row">
 		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h3">Modification de compte</p></div>
