--- a/templates/altic/pwdLost.html.twig
+++ b/templates/altic/pwdLost.html.twig
@@ -4,12 +4,10 @@
 
 {% block body %}
 
+{{ parent() }}
+
 <div class="container">
 
-
-	<div class="row">
-		<div class="col"><br/></div>
-	</div>
 
 	<div class="row">
 		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Récupération de mot de passe</p></div>
