--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,12 +11,12 @@
     <header>
     	{% block header %}
 
-    	<div style="box-shadow: 5px 10px 18px #888888;">
+    	<div>
 
     		<div class="container">
 
     			
-    			<div class="row align-items-center">
+    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
 
     				<div class="col-sm-2"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></div>
 
@@ -44,7 +44,14 @@
     	{% endblock %}
     </header>
     <body>
-        {% block body %}{% endblock %}
+        {% block body %}
+
+        <!--line break-->
+        <div style="height: 200px;">
+        <br/>
+        </div>
+
+        {% endblock %}
         {% block javascripts %}
 
         <script type="text/javascript" src="{{ asset('js/jquery-3.3.1.slim.min.js') }}"></script> 
