MAJ twig de l'image de profil dans la bannière

--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -11,13 +11,21 @@
 
 	<div class="row">
 		
-		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"> </a></div>
+		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="{{ asset('images/pupil/map/tmpMap.png') }}"> </a></div>
 
 		<div class="col-sm-4 align-self-center"><p style="text-align: center;" class="h3">Table de {{tableNumber}}</p></div>
 
 	</div>
 
-	<div class="row"></div>
+	<br/>
+
+	<div class="row">
+
+		<div class="col">
+			<img class="img-fluid" src="{{ asset('images/pupil/map/scrollTexture.png') }}">
+		</div>
+
+	</div>
 
 
 </div>
