--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -11,8 +11,10 @@
 
 	<!--map-->
 	<div class="row align-items-end">
-		<div class="col"><img class="img-fluid" src="https://www.wpmap.org/wp-content/uploads/2015/01/political-map-of-Asia.gif"></div>
+		<div class="col"><img class="img-fluid" src="{{ asset('images/pupil/map/tmpMap.png') }}"></div>
 	</div>
+
+	<br/>
 
     <!--stats-->
 	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
