--- a/templates/baseLogin.html.twig
+++ b/templates/baseLogin.html.twig
@@ -23,22 +23,7 @@
     				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
 
     				<div class="col-sm-1">
-                    {#
-                    {% if profilePic != 'default' %}
-                        <img src="{{ asset('images/pupil/characters/1.png') }}" class="img-thumbnail"></div>
-                    {% else %}
-                        <img src="{{ asset('images/utility/icons/defaultProfilePic.png') }}" class="img-thumbnail"></div>
-                    {% endif %}
-                
-    				<div style="font-family: 'roboto';" class="col-sm-2">
-                        {% if userName != '' %}
-    					   <p>{{userName}}</p>
-    					   <a href="/">Déconnexion</a>
-                           <a href="/modifyAccount"><img style="height: 20px; width: auto;" src="{{ asset('images/utility/icons/cog.png') }}"></a>
-                        {% else %}
-                        #}
-                            <a href="/">Créer un compte</a>
-                        {#{% endif %}#}
+                            <a href="{{path('app_register')}}">Créer un compte</a>
     				</div>
     				
     			</div>
