--- a/templates/altic/enseignantAccueil.twig
+++ b/templates/altic/enseignantAccueil.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{userName}} {% endblock %}
+{% block title %} Bienvenue, {{nomComplet}} {% endblock %}
 
 {% block body %}
 
