--- a/templates/altic/enseignantEnfantDonnees.html.twig
+++ b/templates/altic/enseignantEnfantDonnees.html.twig
@@ -1,11 +1,11 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} Bienvenue, {{userName}} {% endblock %}
+{% block title %} Bienvenue, {{nomComplet}} {% endblock %}
 
 {% block body %}
 
 {{ parent() }}
 
-Données de l'élève {{enfantName}}
+Données de l'élève {{nomEleve}}
 
 {% endblock %}
