Mise en place du thème Sketchy sur certains headers

--- a/templates/altic/index.html.twig
+++ b/templates/altic/index.html.twig
@@ -6,6 +6,6 @@
 
 	{{ parent() }}
 
-	<h1 style="font-family: 'roboto'; text-aligne: justified;" class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
+	<h1 class="display-4">Aidez Célestin lors de ses fabuleuses aventures dans la contrée d'Altic !</h1>
 
 {% endblock %}
