--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -10,15 +10,15 @@
 
 
 	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h3">Modification de compte</p></div>
+		<div class="col"><p class="h3">Modification de compte</p></div>
 	</div>	
 
 	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Changer de mot de passe</p></div>
+		<div class="col"><p class="h4">Changer de mot de passe</p></div>
 	</div>
 
 	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
+		<div class="col"><p class="h4">Supprimer mon compte</p></div>
 	</div>
 
 
