--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -6,14 +6,14 @@
 
 {{ parent() }}
 
-<div class="container" style="font-family: 'roboto';">
+<div class="container">
 
 
 	<div class="row">
 		
-		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img style="max-height: 100px; width: auto;" src="{{ asset('images/pupil/map/tmpMap.png') }}"> </a></div>
+		<div class="col-sm-4 align-self-end"><a href="/pupil">Retour à la carte <br/> <img src="{{ asset('images/pupil/map/tmpMap.png') }}"> </a></div>
 
-		<div class="col-sm-4 align-self-center"><p style="text-align: center;" class="h3">Table de {{tableNumber}}</p></div>
+		<div class="col-sm-4 align-self-center"><p class="h3">Table de {{tableNumber}}</p></div>
 
 	</div>
 
