--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,10 @@
-{% extends 'baseLogin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Register{% endblock %}
 
 {% block body %}
     {{ parent() }}
+<div class="jumbotron">
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -12,4 +13,5 @@
 
         <button class="btn">Register</button>
     {{ form_end(registrationForm) }}
+</div>
 {% endblock %}
