--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -18,7 +18,7 @@
 	</div>
 
 	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
+		<div class="col"><a href="{{altic_SuppCompte}}"style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
 	</div>
 
 
