--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -33,7 +33,7 @@
     				<div style="font-family: 'roboto';" class="col-sm-2">
                         {% if userName != '' %}
     					   <p>{{userName}}</p>
-    					   <a href="/">Déconnexion</a>
+    					   <a href="/logout">Déconnexion</a>
                            <a href="/modifyAccount"><img style="height: 20px; width: auto;" src="{{ asset('images/utility/icons/cog.png') }}"></a>
                         {% else %}
                             <a href="/">Créer un compte</a>
