--- a/templates/altic/enfantAccueil.html.twig
+++ b/templates/altic/enfantAccueil.html.twig
@@ -45,7 +45,9 @@
 
 		<div class="col-sm-4"><p class="h5">Stastistiques</p></div>
 
-		<div class="col-sm-4"><p class="h5">Mes enseignants</p></div>
+		<div class="col-sm-4"><p class="h5">Mes enseignants</p>
+		{{form(vueFormulaireLienEnseignant)}}
+		</div>
 
 	</div>
 
