--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -45,7 +45,7 @@
 </div>
 <div class="row align-items-center">
 <div class="col-5"></div>
-    <a href="{{path('altic_pwdLost')}}">Mot de passe oublié</a>
+    <a href="{{path('altic_mdpPerdu')}}">Mot de passe oublié</a>
 <div class="col-5"></div>
 </div>
 </div>
