--- a/templates/altic/enfantAccueil.html.twig
+++ b/templates/altic/enfantAccueil.html.twig
@@ -46,7 +46,7 @@
 		<div class="col-sm-4"><p class="h5">Stastistiques</p></div>
 
 		<div class="col-sm-4"><p class="h5">Mes enseignants</p>
-		{{form(vueFormulaireLienEnseignant)}}
+		{#{form(vueFormulaireLienEnseignant)}#}
 		</div>
 
 	</div>
