--- a/templates/altic/mdpPerdu.html.twig
+++ b/templates/altic/mdpPerdu.html.twig
@@ -10,7 +10,7 @@
 
 
 	<div class="row">
-		<div class="col"><p class="h3">Récupération de mot de passe</p></div>
+		<div class="col"><p style="font-family: 'roboto'; text-align: center;" class="h3">Récupération de mot de passe</p></div>
 	</div>
 
 
