--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,9 +1,10 @@
-{% extends 'baseLogin.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block title %}Register{% endblock %}
 
 {% block body %}
     {{ parent() }}
+<div class="jumbotron">
     <h1>Register</h1>
     <div class="container">
     {{ form_start(registrationForm) }}
@@ -32,4 +33,6 @@
         <button class="btn">Register</button>
         </div>
     {{ form_end(registrationForm) }}
+    </div>
+</div>
 {% endblock %}
