--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,24 +16,24 @@
     		<div class="container">
 
     			
-    			<div class="row align-items-center">
+    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
 
-    				<div class="col-sm-2"><a class="display-1">Altic</h1></a></div>
+    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
 
-    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+    				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
 
     				<div class="col-sm-1">
 
-                    {% if imgProfil != 'default' %}
-                        <img src="{{ asset('images/enfant/characters/1.png') }}" class="img-thumbnail"></div>
+                    {% if profilePic != 'default' %}
+                        <img src="{{ asset('images/pupil/characters/1.png') }}" class="img-thumbnail"></div>
                     {% else %}
                         <img src="{{ asset('images/utility/icons/defaultProfilePic.png') }}" class="img-thumbnail"></div>
                     {% endif %}
 
-    				<div class="col-sm-2">
-                        {% if nomComplet != '' %}
-    					   <p>{{nomComplet}}</p>
-    					   <a href="/">Déconnexion</a>
+    				<div style="font-family: 'roboto';" class="col-sm-2">
+                        {% if userName != '' %}
+    					   <p>{{userName}}</p>
+    					   <a href="/logout">Déconnexion</a>
                            <a href="/modifyAccount"><img style="height: 20px; width: auto;" src="{{ asset('images/utility/icons/cog.png') }}"></a>
                         {% else %}
                             <a href="/">Créer un compte</a>
@@ -53,7 +53,7 @@
         {% block body %}
 
         <!--line break-->
-        <div>
+        <div style="height: 200px;">
         <br/>
         </div>
 
