--- a/templates/baseLogin.html.twig
+++ b/templates/baseLogin.html.twig
@@ -2,40 +2,44 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Bienvenue sur Altic !{% endblock %}</title>
+        <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheets %}
         <link rel="stylesheet" type="text/css" href="{{ asset('css/bootstrap.min.css') }}">
         <link rel="stylesheet" type="text/css" href="{{ asset('css/customFonts.css') }}">
         {% endblock %}
     </head>
     <header>
-        {% block header %}
+    	{% block header %}
 
-        <div>
+    	<div>
 
-            <div class="container">
+    		<div class="container">
 
-                
-                <div class="row align-items-center">
+    			
+    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
 
-                    <div class="col-sm-2"><a class="display-1">Altic</h1></a></div>
+    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
 
-                    <div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
-                    
-                </div>
+    				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
 
-            
-            </div>
+    				<div class="col-sm-1">
+                            <a href="{{path('app_register')}}">Créer un compte</a>
+    				</div>
+    				
+    			</div>
 
-        </div>
+    		
+    		</div>
 
-        {% endblock %}
+    	</div>
+
+    	{% endblock %}
     </header>
     <body>
         {% block body %}
 
         <!--line break-->
-        <div>
+        <div style="height: 200px;">
         <br/>
         </div>
 
