--- a/templates/altic/enfantAccueil.html.twig
+++ b/templates/altic/enfantAccueil.html.twig
@@ -17,7 +17,7 @@
 	<br/>
 
     <!--stats-->
-	<div style="font-family: 'roboto'; font-weight: bold;" class="row align-items-top">
+	<div class="row align-items-top">
 		
 		<div class="col-sm-4">
 			<p class="h5">Trophées</p>
