--- a/templates/baseLogin.html.twig
+++ b/templates/baseLogin.html.twig
@@ -14,20 +14,14 @@
     	<div>
 
     		<div class="container">
-
-    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
-    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
    			
-    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
+    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px; width: 110%;">
 
-    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
+    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/">
+                        <h1 class="display-1">Altic</h1></a>
+                    </div>
 
-    				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
-    			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
-
-    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
-
-    				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
 
     				<div class="col-sm-1">
                             <a href="{{path('app_register')}}">Créer un compte</a>
