début de mise en page, correction des fautes d'orthographes

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,9 +18,9 @@
     			
     			<div class="row align-items-center" style="position: fixed; box-shadow: 5px 10px 18px #888888; z-index: 10; background-color: white; left: 0px;">
 
-    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 style="font-family: 'adam';" class="display-1">Altic</h1></a></div>
+    				<div class="col-sm-2"><a style="color: black; text-decoration: none;" href="/"><h1 class="display-1">Altic</h1></a></div>
 
-    				<div class="col-sm-7"><p style="font-family: 'roboto';" class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
+    				<div class="col-sm-7"><p class="h3">Apprenez les tables de multiplication avec le pingouin Célestin</p></div>
 
     				<div class="col-sm-1">
 
@@ -29,7 +29,7 @@
                     {% else %}
                         <img src="{{ asset('images/utility/icons/defaultProfilePic.png') }}" class="img-thumbnail"></div>
                     {% endif %}
-    				<div style="font-family: 'roboto';" class="col-sm-2">
+    				<div class="col-sm-2">
                         {% if userName != '' %}
     					   <p>{{userName}}</p>
     					   <a href="/logout">Déconnexion</a>
