--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -9,15 +9,26 @@
         <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Connectez vous ici</h1>
-    <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
-    <label for="inputPassword" class="sr-only">Mot de passe</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Password" required>
+<div class="container">
+<div class="jumbotron">
+    <h1 class="h3 mb-3 font-weight-normal">Connectez-vous ici</h1>
+    <div class="row">
+    <div class="col-4">
+        <label for="inputEmail" class="sr-only">Email</label>
+        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" placeholder="Email" required autofocus>
+    </div>
+    </div>
+    <br>
+    <div class="row">
+    <div class="col-4">
+        <label for="inputPassword" class="sr-only">Mot de passe</label>
+        <input type="password" name="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+    </div>
+    </div>
 
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
-    >
+    ><br/>
 
     {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
@@ -31,14 +42,24 @@
     #}
 
     <button class="btn btn-lg btn-primary" type="submit">
-        Se Connectez
+        Se Connecter
     </button>
 </form>
-<a href="{{path('app_register')}}">Créer un compte</a><BR>
-<a href="{{path('altic_pwdLost')}}">Mot de passe oublié</a><BR>
-<h1>Aidez celestin dans ses fabuleuse aventure</h1><BR>
+<br>
+<br>
+<div class="row">
+    <a href="{{path('app_register')}}">Créer un compte</a><BR>
+</div>
+<div class="row">
+    <a href="{{path('altic_pwdLost')}}">Mot de passe oublié</a><BR>
+</div>
+</div>
+<br>
+<div class="row">
+    <h1>Aidez celestin dans ses fabuleuse aventures</h1><BR>
+</div>
 <video width="400" controls>
  <source src="{{asset('video/sauce.mp4')}}" type="video/mp4">
- what the fuck ?
 </video>
+</div>
 {% endblock %}
