--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,8 @@
 
 {% block body %}
     {{ parent() }}
+<div class="container">
+<div class="col-5">
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
@@ -14,6 +16,8 @@
         {{ form_row(registrationForm.password) }}
         {{ form_row(registrationForm._token) }}
         {{form_row(registrationForm.avatar)}}
-        <button class="btn">Register</button>
+        <button class="btn btn-lg btn-primary">Créer</button>
     {{ form_end(registrationForm) }}
+</div>
+</div>
 {% endblock %}
