mise en place de la suppression de compte

--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -9,16 +9,10 @@
 <div class="container">
 
 
-	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h3">Modification de compte</p></div>
-	</div>	
+	{{form(modifyForm)}}
 
 	<div class="row">
-		<div class="col"><p style="text-align: center; font-family: 'roboto';" class="h4">Changer de mot de passe</p></div>
-	</div>
-
-	<div class="row">
-		<div class="col"><a href="{{altic_SuppCompte}}"style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
+		<div class="col"><a href="/deleteAccount"style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
 	</div>
 
 
