Mise en place du fond, des iles et des liens sans route

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,12 +1,12 @@
 {% extends 'baseLogin.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Altic - créer un compte{% endblock %}
 
 {% block body %}
     {{ parent() }}
 <div class="container">
 <div class="col-5">
-    <h1>Register</h1>
+    <h1>Créer un compte</h1>
 
     {{ form_start(registrationForm) }}
         {{form_row(registrationForm.estEnseignant)}}
