--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -57,9 +57,7 @@
 <br>
 <div class="row">
     <h1>Aidez celestin dans ses fabuleuse aventures</h1><BR>
+    <img src="{{asset('images/index/jeu1.png')}}" style="">
 </div>
-<video width="400" controls>
- <source src="{{asset('video/sauce.mp4')}}" type="video/mp4">
-</video>
 </div>
 {% endblock %}
