--- a/templates/altic/enfantAccueil.html.twig
+++ b/templates/altic/enfantAccueil.html.twig
@@ -11,7 +11,9 @@
 
 	<!--map-->
 	<div class="row align-items-end">
-		<div class="col"><img class="img-fluid" src="{{ asset('images/enfant/map/tmpMap.png') }}"></div>
+		<div class="col">
+			<img class="img-fluid" src="{{ asset('images/enfant/map/sea.png') }}">
+		</div>
 	</div>
 
 	<br/>
