--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -10,8 +10,24 @@
 	
 
 	<!--map-->
+	{% set labels = ['Imoc', 'Isia', 'Vorod', 'Elemia', 'Rania', 'Pona', 'Nesa', 'Sovia', 'Caguma', 'Belam'] %}
 	<div class="row align-items-end">
-		<div class="col"><img class="img-fluid" src="{{ asset('images/pupil/map/tmpMap.png') }}"></div>
+		<div class="row align-items-center" style="padding: 10px; background-image: url({{ asset('images/pupil/map/sea.png') }});">
+		<div class="row">
+			{% for i in 1..5 %}
+			<div class="col">
+				<a href="#" style="color: white; font-size: 1.5em;"><img class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+			</div>
+			{% endfor %}
+		</div>
+		<div class="row">
+			{% for i in 6..10 %}
+			<div class="col">
+				<a href="#" style="color: white; font-size: 1.5em;"><img class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+			</div>
+			{% endfor %}
+		</div>
+		</div>
 	</div>
 
 	<br/>
