--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -15,15 +15,15 @@
 		<div class="row align-items-center" style="padding: 10px; background-image: url({{ asset('images/pupil/map/sea.png') }});">
 		<div class="row">
 			{% for i in 1..5 %}
-			<div class="col">
-				<a href="#" style="color: white; font-size: 1.5em;"><img class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+			<div class="col text-center">
+				<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
 			</div>
 			{% endfor %}
 		</div>
 		<div class="row">
 			{% for i in 6..10 %}
-			<div class="col">
-				<a href="#" style="color: white; font-size: 1.5em;"><img class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+			<div class="col text-center">
+				<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
 			</div>
 			{% endfor %}
 		</div>
