--- a/templates/altic/pupilWelcome.html.twig
+++ b/templates/altic/pupilWelcome.html.twig
@@ -9,24 +9,32 @@
 <div class="container">
 	
 
-	<!--map-->
+	<!--map and Constantin-->
 	{% set labels = ['Imoc', 'Isia', 'Vorod', 'Elemia', 'Rania', 'Pona', 'Nesa', 'Sovia', 'Caguma', 'Belam'] %}
 	<div class="row align-items-end">
-		<div class="row align-items-center" style="padding: 10px; background-image: url({{ asset('images/pupil/map/sea.png') }});">
-		<div class="row">
-			{% for i in 1..5 %}
-			<div class="col text-center">
-				<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+		<!--map-->
+		<div class="col-9">
+			<div class="row align-items-center" style="padding: 10px; background-image: url({{ asset('images/pupil/map/sea.png') }});">
+			<div class="row">
+				{% for i in 1..5 %}
+				<div class="col text-center">
+					<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+				</div>
+				{% endfor %}
 			</div>
-			{% endfor %}
-		</div>
-		<div class="row">
-			{% for i in 6..10 %}
-			<div class="col text-center">
-				<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+			<div class="row">
+				{% for i in 6..10 %}
+				<div class="col text-center">
+					<a href="#" style="color: white; font-size: 1.5em;"><img style="background-color: rgba(0, 0, 0, 0.5); border-radius: 100%; padding: 10px;" class="img-fluid" src="{{ asset('images/pupil/map/' ~ i ~ '_.png') }}">{{ labels[i-1] }}</a>
+				</div>
+				{% endfor %}
 			</div>
-			{% endfor %}
+			</div>
 		</div>
+		<!--Constantin-->
+		<div class="col-3">
+			<h4 style="font-weight: bold;">Bonjour, je suis Constantin ! BlablaBlablaBlablaBlablaBlabla</h4 style="font-weight: bold;">
+			<img class="img-fluid" src="{{ asset('images/pupil/characters/21.png') }}">
 		</div>
 	</div>
 
