stabilisation de la suppression

--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -9,7 +9,7 @@
 <div class="container">
 
 
-	{{form(modifyForm)}}
+	{#{{form(modifyForm)}}#}
 
 	<div class="row">
 		<div class="col"><a href="/deleteAccount"style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
