--- a/templates/altic/modifyAccount.html.twig
+++ b/templates/altic/modifyAccount.html.twig
@@ -7,9 +7,17 @@
 {{ parent() }}
 
 <div class="container">
+{% for message in app.flashes('notice') %}
+    <div class="flash-notice">
+        {{ message }}
+    </div>
+{% endfor %}
 
-
-	{#{{form(modifyForm)}}#}
+	{{form_start(modifyForm)}}
+		{{form_row(modifyForm.oldPassword)}}
+		{{form_row(modifyForm.newPassword)}}
+        <button class="btn" type="submit">changez mon mot de passe</button>
+	{{form_end(modifyForm)}}
 
 	<div class="row">
 		<div class="col"><a href="/deleteAccount"style="text-align: center; font-family: 'roboto';" class="h4">Supprimer mon compte</p></div>
