--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -51,12 +51,12 @@
     <a href="{{path('app_register')}}">Créer un compte</a><BR>
 </div>
 <div class="row">
-    <a href="{{path('altic_pwdLost')}}">Mot de passe oublié</a><BR>
+    <a href="#">Mot de passe oublié</a><BR>
 </div>
 </div>
 <br>
 <div class="row">
-    <h1>Aidez celestin dans ses fabuleuse aventures</h1><BR>
+    <h1>Aidez celestin dans ses fabuleuses aventures</h1><BR>
     <img src="{{asset('images/index/jeu1.png')}}" style="">
 </div>
 </div>
