correction de bug

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -56,7 +56,7 @@
 </div>
 <br>
 <div class="row">
-    <h1>Aidez celestin dans ses fabuleuses aventures</h1><BR>
+    <h1>Aidez Célestin dans ses fabuleuses aventures</h1><BR>
     <img src="{{asset('images/index/jeu1.png')}}" style="">
 </div>
 </div>
