mise en place technique du jeu cave tel quel, fonctionnel

--- a/templates/altic/caveGame.html.twig
+++ b/templates/altic/caveGame.html.twig
@@ -23,7 +23,7 @@
 {% block javascripts %}
 
 	<script type="text/javascript" src="{{ asset('js/jquery-3.3.1.min.js') }}"></script>
-	<script type="text/javascript" src="J{{ asset('js/games/tools.js') }}"></script>
+	<script type="text/javascript" src="{{ asset('js/games/tools.js') }}"></script>
 	<script type="text/javascript" src="{{ asset('js/games/caveLogic.js') }}"></script>
 
 {% endblock %}
