--- a/templates/altic/pupilTable.html.twig
+++ b/templates/altic/pupilTable.html.twig
@@ -25,7 +25,9 @@
 		<div class="col">
 			{% for i in 0..11 %}
 			{% if images[i] != 'startMAP.png' and images[i] != 'endMAP.png' and bCanPlay[i-1] == true %}
-				<a href="#">
+				<a href="{{ path('altic_pupilTraining', {
+					tableNumber:tableNumber,levelNumber:levelsNumbers[i-1],mapName:images[i]
+				}) }}">
 					<img style="max-height: 200px;" src="{{ asset('images/pupil/map/' ~ images[i]) }}">
 				</a>
 			{% else %}
