fin de l'intégration de base du jeu cave, esthétique fonctionnelle

--- a/templates/altic/caveGame.html.twig
+++ b/templates/altic/caveGame.html.twig
@@ -6,18 +6,32 @@
 	<meta charset="utf-8">
 
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('css/game/caveStyle.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('css/games/caveStyle.css') }}">
 {% endblock %}	
+
+{% set gameImages={
+	celestin: asset('images/pupil/characters/1.png'),
+	room: asset('images/pupil/games/cave/1.png'),
+	door: asset('images/pupil/games/rocks/1.png'),
+	tool1: asset('images/pupil/games/tools/1.png'),
+	tool2: asset('images/pupil/games/tools/2.png'),
+	tool3: asset('images/pupil/games/tools/3.png'),
+	tool4: asset('images/pupil/games/tools/4.png')
+} %}
 
 </head>
 <body>
 
 {% block body %}
+	{#{{ dump(questionsAndAnswers) }}#}
 	<div id="drawing">
 		
 	</div>
 
-	<div id="data" data-questionsAnswers="{{ questionsAndAnswers }}"></div>
+	<div id="data" 
+		data-questionsAnswers="{{ questionsAndAnswers }}"
+		data-images="{{ gameImages|json_encode() }}"
+	></div>
 {% endblock %}
 
 {% block javascripts %}
