finition des page de choix de personage

--- a/templates/altic/choiceAvatar.html.twig
+++ b/templates/altic/choiceAvatar.html.twig
@@ -6,6 +6,8 @@
 
 {{ parent() }}
 {% for avatar in playableAvatar %}
+<a href="#">{# TU GERE LE LIENS AVC LE JEU, HIPPIE #}
     <img style="max-height: 100px; max-width: 100px;" src="{{avatar}}"><br/><br/>
+    </a>
 {% endfor %}
 {% endblock %}
