debug et mise en lien de base entre le choix perso et le jeu

--- a/templates/altic/caveGame.html.twig
+++ b/templates/altic/caveGame.html.twig
@@ -10,7 +10,7 @@
 {% endblock %}	
 
 {% set gameImages={
-	celestin: asset('images/pupil/characters/1.png'),
+	celestin: asset(celestinImg),
 	room: asset('images/pupil/games/cave/1.png'),
 	door: asset('images/pupil/games/rocks/1.png'),
 	tool1: asset('images/pupil/games/tools/1.png'),
