mise en place basique et adaptation du jeu de Rémi (mountain)

--- a/templates/altic/moutainGame.html.twig
+++ b/templates/altic/moutainGame.html.twig
@@ -6,17 +6,14 @@
 	<meta charset="utf-8">
 
 {% block stylesheets %}
-	<link rel="stylesheet" type="text/css" href="{{ asset('css/games/caveStyle.css') }}">
+	<link rel="stylesheet" type="text/css" href="{{ asset('css/games/mountainStyle.css') }}">
 {% endblock %}	
 
 {% set gameImages={
 	celestin: asset(celestinImg),
-	room: asset('images/pupil/games/cave/1.png'),
-	door: asset('images/pupil/games/rocks/1.png'),
-	tool1: asset('images/pupil/games/tools/1.png'),
-	tool2: asset('images/pupil/games/tools/2.png'),
-	tool3: asset('images/pupil/games/tools/3.png'),
-	tool4: asset('images/pupil/games/tools/4.png')
+	wizard: asset(wizardImg),
+	background: asset('images/pupil/games/mountain/01.png'),
+	bubble: asset('images/pupil/games/misc/04.png')
 } %}
 	<script type="text/javascript" src="JS/jquery-3.3.1.js"></script>
 	<script type="text/javascript" src="JS/tools.js"></script>
